; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/ocxl/extr_context.c_map_afu_irq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/ocxl/extr_context.c_map_afu_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm_area_struct = type { i32 }
%struct.ocxl_context = type { i32 }

@VM_FAULT_SIGBUS = common dso_local global i32 0, align 4
@PAGE_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vm_area_struct*, i64, i32, %struct.ocxl_context*)* @map_afu_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @map_afu_irq(%struct.vm_area_struct* %0, i64 %1, i32 %2, %struct.ocxl_context* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.vm_area_struct*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.ocxl_context*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.vm_area_struct* %0, %struct.vm_area_struct** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.ocxl_context* %3, %struct.ocxl_context** %9, align 8
  %12 = load %struct.ocxl_context*, %struct.ocxl_context** %9, align 8
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @ocxl_irq_offset_to_id(%struct.ocxl_context* %12, i32 %13)
  store i32 %14, i32* %11, align 4
  %15 = load %struct.ocxl_context*, %struct.ocxl_context** %9, align 8
  %16 = load i32, i32* %11, align 4
  %17 = call i32 @ocxl_afu_irq_get_addr(%struct.ocxl_context* %15, i32 %16)
  store i32 %17, i32* %10, align 4
  %18 = load i32, i32* %10, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %4
  %21 = load i32, i32* @VM_FAULT_SIGBUS, align 4
  store i32 %21, i32* %5, align 4
  br label %29

22:                                               ; preds = %4
  %23 = load %struct.vm_area_struct*, %struct.vm_area_struct** %6, align 8
  %24 = load i64, i64* %7, align 8
  %25 = load i32, i32* %10, align 4
  %26 = load i32, i32* @PAGE_SHIFT, align 4
  %27 = ashr i32 %25, %26
  %28 = call i32 @vmf_insert_pfn(%struct.vm_area_struct* %23, i64 %24, i32 %27)
  store i32 %28, i32* %5, align 4
  br label %29

29:                                               ; preds = %22, %20
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i32 @ocxl_irq_offset_to_id(%struct.ocxl_context*, i32) #1

declare dso_local i32 @ocxl_afu_irq_get_addr(%struct.ocxl_context*, i32) #1

declare dso_local i32 @vmf_insert_pfn(%struct.vm_area_struct*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
